fix: applied changes to home page chart, slowed animations, set navbar z-index.

--- a/sadFront/src/index.css
+++ b/sadFront/src/index.css
@@ -38,3 +38,11 @@ textarea {
 input {
     background-color: white !important;
 }
+
+.css-j0a4z8-MuiChartsGrid-root .MuiChartsGrid-line {
+    stroke-width: 0 !important;
+}
+
+.css-lp68i5-MuiLineElement-root {
+    stroke-width: 4px !important;
+}
